--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is the first file using Git.</h1>
     <h2>This is one of updates.</h2>
+    <h3>This is another update.</h3>
 </body>
 </html>
